--- a/IndustryEmpire/src/vehicledialog.fxml
+++ b/IndustryEmpire/src/vehicledialog.fxml
@@ -20,6 +20,7 @@
          <children>
             <Button fx:id="btBuy" mnemonicParsing="false" text="Buy" />
             <Button fx:id="btCancel" mnemonicParsing="false" text="Cancel" />
+            <Button fx:id="btFreight" mnemonicParsing="false" text="Set Freight" />
          </children>
       </HBox>
    </children>
