--- a/IndustryEmpire/src/vehicledialog.fxml
+++ b/IndustryEmpire/src/vehicledialog.fxml
@@ -15,6 +15,7 @@
             <Button fx:id="btDelete" mnemonicParsing="false" text="-" />
          </children>
       </HBox>
+      <Button fx:id="btSetNextDest" mnemonicParsing="false" text="Set As Next Destination" />
       <ListView fx:id="itineraryView" prefHeight="200.0" prefWidth="200.0" />
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
