--- a/IndustryEmpire/src/citydialog.fxml
+++ b/IndustryEmpire/src/citydialog.fxml
@@ -9,19 +9,30 @@
 <?import javafx.scene.layout.Pane?>
 
 <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="800.0" styleClass="citybackground" stylesheets="@../CSS/city.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CityPaneController">
-   <children>
-      <Label fx:id="lbCityName" alignment="TOP_CENTER" text="Cityname">
-         <font>
-            <Font name="Copperplate Gothic Bold" size="34.0" />
-         </font>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </Label>
-      <Pane>
          <children>
-            <HBox fx:id="resourceDisplay" fillHeight="false" styleClass="resbackground" stylesheets="@../CSS/city.css" />
+            <VBox alignment="CENTER">
+               <children>
+                  <Label fx:id="lbCityName" alignment="TOP_CENTER" text="Cityname">
+                     <font>
+                        <Font name="Copperplate Gothic Bold" size="34.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </Label>
+                  <VBox prefHeight="600.0" prefWidth="800.0">
+                     <children>
+                        <Label text="Resources" />
+                        <Pane>
+                           <children>
+                              <HBox fx:id="resourceDisplay" fillHeight="false" styleClass="resbackground" stylesheets="@../CSS/city.css" />
+                           </children>
+                        </Pane>
+                        <Label text="Factories" />
+                        <HBox fx:id="hbFactory" prefHeight="100.0" prefWidth="200.0" spacing="5.0" />
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
          </children>
-      </Pane>
-   </children>
-</VBox>
+      </VBox>
